--- a/build.gradle
+++ b/build.gradle
@@ -140,8 +140,8 @@ android {
             versionDev {
                 applicationId "com.nextcloud.android.beta"
                 dimension "default"
-                versionCode 20190406
-                versionName "20190406"
+                versionCode 20190414
+                versionName "20190414"
             }
         }
     }
@@ -169,7 +169,7 @@ android {
     }
 
     tasks.register("pmd", Pmd) {
-        ruleSetFiles = files("${project.rootDir}/pmd-ruleset.xml")
+        ruleSetFiles = files("${project.rootDir}/ruleset.xml")
         ignoreFailures = false
         ruleSets = []
 
@@ -285,8 +285,12 @@ dependencies {
 
     // dependencies for local unit tests
     testImplementation 'junit:junit:4.12'
-    testImplementation 'org.mockito:mockito-core:2.26.0'
+    testImplementation 'org.mockito:mockito-core:2.27.0'
     testImplementation 'androidx.test:core:1.1.0'
+    testImplementation 'org.powermock:powermock-core:2.0.0'
+    testImplementation 'org.powermock:powermock-module-junit4:2.0.0'
+    testImplementation 'org.powermock:powermock-api-mockito2:2.0.0'
+    testImplementation 'org.json:json:20180813'
 
     // dependencies for instrumented tests
     // JUnit4 Rules
